--- a/css/attractions_style.css
+++ b/css/attractions_style.css
@@ -436,6 +436,10 @@ p {
     background: #282828 !important;
   }
 
+  .custom-item, .custom-item1, .dropdown-item {
+    font-size: 0.9rem;
+  }
+
   .list {
     margin-bottom: 50px;
   }
