--- a/css/history.css
+++ b/css/history.css
@@ -412,6 +412,10 @@ figcaption {
     background: #282828 !important;
   }
 
+  .custom-item, .custom-item1, .dropdown-item {
+    font-size: 0.9rem;
+  }
+
   .container {
     max-width: 880px;
   }
