--- a/css/index.css
+++ b/css/index.css
@@ -643,6 +643,10 @@ svg a {
     background: #282828 !important;
   }
 
+  .custom-item, .custom-item1, .dropdown-item {
+    font-size: 0.9rem;
+  }
+
   .navbar-brand {
     margin-top: 5px;
     margin-bottom: 5px;
